[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.14.2"
prost = "0.13.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
cczu-client-api = { git = "https://github.com/CCZU-OSSA/cczu-client-api.git" }
serde = "*"
serde_json = "*"
reqwest = "*"
once_cell = { version = "1.19.0" }

[target.'cfg(windows)'.dependencies]
guid-create = "0.4.1"
windows = { version = "0.58.0", features = ["Win32_System_Com"] }
