[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "7.1.0"
prost = "0.13.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
cczuni = { git = "https://github.com/CCZU-OSSA/cczuni.git", default-features = false, features = [
    "calendar",
    "internals",
    "rustls-tls",
] }
serde = "*"
serde_json = "*"
reqwest = { version = "*", default-features = false }

[target.'cfg(windows)'.dependencies]
guid-create = "0.4.1"
windows = { version = "0.59.0", features = ["Win32_System_Com"] }
