[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "8.8.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs"] }
cczuni = { git = "https://github.com/CCZU-OSSA/cczuni.git", default-features = false, features = [
    "calendar",
    "internals",
    "rustls-tls",
] }
serde = "*"
serde_json = "*"
reqwest = { version = "*", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20.0"
dotenv = "0.15"

[target.'cfg(windows)'.dependencies]
guid-create = "0.5.2"
windows = { version = "0.62.2", features = ["Win32_System_Com"] }

